--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["Content.js"]
+      "js": ["Extensions.js"]
     }
   ],
   "icons": { "48": "icon48.png", "128": "icon128.png" },
