extensions and all css

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "AddBlocker",
+  "name": "SiteBlocker",
   "version": "0.1.1",
   "content_scripts": [
     {
@@ -11,7 +11,7 @@
   "icons": { "48": "icon48.png", "128": "icon128.png" },
   "browser_action": {
     "default_popup": "Popup.html",
-    "default_title": "Add Blocker"
+    "default_title": "SiteBlocker"
   },
   "permissions": [
     "https://www.youtube.com/*",
@@ -19,7 +19,8 @@
     "https://www.netflix.com/*",
     "https://www.spotify.com/*",
     "https://www.masaischool.com/*",
-    "https://discord.com/",
-    "https://www.roblox.com/"
+    "https://discord.com/*",
+    "https://github.com/*"
+    
   ]
 }
