--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   ],
   "icons": { "48": "icon48.png", "128": "icon128.png" },
   "browser_action": {
-    "default_popup": "Popup.html",
+    "default_popup": "index.html",
 
     "default_title": "Site Blocker"
 
